syntax = "proto3";

package com.road.yishi.proto.carnival;

message LinkGameMsg {
  int32 opType = 1;
  int32 aX = 2;
  int32 aY = 3;
  int32 bX = 4;
  int32 bY = 5;
  int32 score = 6;
  int32 time = 7;
  int32 strength = 8;
  string points = 9;
  int32 bombCount = 10;
  int32 resetCount = 11;
  int32 param1 = 12;
  int32 tollgate = 13;
  string reward = 14;
  int32 combCount = 15;
  int32 addScore = 16;
  int32 pointValue = 17;
  repeated int32 scoreValue = 18;
}
